Started to rewrite to bootstrap 3.

--- a/src/Club/BookingBundle/Resources/views/Booking/addMe.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/addMe.html.twig
@@ -1,4 +1,4 @@
-    <div class="span6">
+    <div class="col-sm-6">
         <div class="well">
         <h3>{% trans %}Booking{% endtrans %}</h3>
         <p>{% trans %}You can participate in this booking as well, click on the button below.{% endtrans %}</p>
