--- a/src/Club/BookingBundle/Resources/views/Booking/cancel_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/cancel_form.html.twig
@@ -1,4 +1,4 @@
-    <div class="span6">
+    <div class="col-sm-6">
         <div class="well">
 
             {% if booking.user == app.user or is_granted('ROLE_BOOKING_ADMIN') %}
