--- a/src/Club/BookingBundle/Resources/views/Booking/morePlayers.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/morePlayers.html.twig
@@ -1,4 +1,4 @@
-    <div class="span6">
+    <div class="col-sm-6">
         <div class="well">
         <h3>{% trans %}Booking{% endtrans %}</h3>
         <form method="post" action="{{ path('club_booking_booking_addplayer', {'id':booking.id}) }}">
