--- a/src/Club/EventBundle/Resources/views/Event/entry.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/entry.html.twig
@@ -1,6 +1,6 @@
 <div class="well well-small">
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-xs-12">
             <div class="pull-left">
                 <div class="media-object calendar-header">
                     <p>
