--- a/src/Club/ShopBundle/Resources/views/AdminProduct/archive.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/archive.html.twig
@@ -13,29 +13,35 @@
 
 {% block body %}
 <table class="table">
-  <thead>
+    <thead>
+        <tr>
+            <th>{% trans %}Product{% endtrans %}</th>
+            <th>{% trans %}Active{% endtrans %}</th>
+            <th class="action">{% trans %}Action{% endtrans %}</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for product in products %}
     <tr>
-      <th>{% trans %}Product{% endtrans %}</th>
-      <th>{% trans %}Active{% endtrans %}</th>
-      <th class="action">{% trans %}Action{% endtrans %}</th>
+        <td>{{ product.productName }}</td>
+
+        {% if product.active %}
+        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':product.active, 'url':path('admin_shop_product_deactivate', {'id':product.id})} %}</td>
+        {% else %}
+        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':product.active, 'url':path('admin_shop_product_activate', {'id':product.id})} %}</td>
+        {% endif %}
+
+        <td>
+            {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_product_edit', { 'id':product.id })} %}
+            {% include "ClubLayoutBundle:Default:attribute_link.html.twig" with {'url':path('admin_shop_product_attribute', {'id':product.id})} %}
+            {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('admin_shop_product_users', {'id':product.id})} %}
+        </td>
     </tr>
-  </thead>
-  <tbody>
-  {% for product in products %}
+    {% else %}
     <tr>
-      <td>{{ product.productName }}</td>
-      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':product.active} %}</td>
-      <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_product_edit', { 'id':product.id })} %}
-        {% include "ClubLayoutBundle:Default:attribute_link.html.twig" with {'url':path('admin_shop_product_attribute', {'id':product.id})} %}
-        {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('admin_shop_product_users', {'id':product.id})} %}
-      </td>
+        <td colspan="2">{% trans %}There are no products.{% endtrans %}</td>
     </tr>
-  {% else %}
-  <tr>
-    <td colspan="2">{% trans %}There are no products.{% endtrans %}</td>
-  </tr>
-  {% endfor %}
-  </tbody>
+    {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
