--- a/src/Club/BookingBundle/Resources/views/Overview/book_plan_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/book_plan_form.html.twig
@@ -1,12 +1,9 @@
-<div class="row-fluid">
-    <div class="span6">
-        <div class="well">
-            <h3>{% trans %}Booking plan{% endtrans %}</h3>
-            <form method="get" action="{{ path('club_booking_plan_pre', {'date':date|date('Y-m-d'),'interval_id':interval.id}) }}">
+<div class="col-sm-6">
+    <div class="well">
+        <h3>{% trans %}Booking plan{% endtrans %}</h3>
+        <form method="get" action="{{ path('club_booking_plan_pre', {'date':date|date('Y-m-d'),'interval_id':interval.id}) }}">
             <p>{% trans %}Click here if you want to create a booking plan.{% endtrans %}</p>
             {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
-            </form>
-        </div>
+        </form>
     </div>
 </div>
-
