--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -1,64 +1,80 @@
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="{{ path('localized') }}"><img src="{{ asset('bundles/clublayout/images/logo_top.png') }}" /></a>
-          <div class="nav-collapse collapse">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ path('localized') }}"><img src="{{ asset('bundles/clublayout/images/logo_top.png') }}" /></a>
+        </div>
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
 
-             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-             <ul class="nav pull-right">
-                <li><a href="{{ path('club_dashboard_dashboard_index') }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/user.png') }}" /> {{ app.user.name }}</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ path('user') }}"><span>{% trans %}Profile{% endtrans %}</span></a></li>
-                        <li><a href="{{ path('club_user_location_index') }}"><span>{% trans %}Location{% endtrans %}</span></a></li>
-                        {% for item in menu_right %}
-                        <li><a href="{{ item.route }}"><span>{{ item.name }}</span></a></li>
-                        {% endfor %}
-                        <li class="divider"></li>
-                        <li><a href="{{ path('club_welcome_blog_index') }}">{% trans %}Blog{% endtrans %}</a></li>
-                        <li><a href="{{ path('logout') }}">{% trans %}Logout{% endtrans %}</a></li>
-
-                    </ul>
-                </li>
-
-             </ul>
-             {% endif %}
-
-             <ul class="nav">
                 {% for item in menu %}
 
-                    {% if item.header is defined and item.items is defined %}
-                        {% if item.items|length == 1 %}
-                            {% for i in item.items %}
-                            <li><a href="{{ i.route }}">{{ i.name }}</a></li>
-                            {% endfor %}
-                        {% else %}
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ item.header }} <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
+                {% if item.header is defined and item.items is defined %}
+                {% if item.items|length == 1 %}
+                {% for i in item.items %}
+                <li><a href="{{ i.route }}">{{ i.name }}</a></li>
+                {% endfor %}
+                {% else %}
+                <li class="dropdown" role="menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ item.header }} <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
 
-                                {% for i in item.items %}
-                                    <li><a href="{{ i.route }}">{{ i.name }}</a></li>
-                                {% endfor %}
+                    {% for i in item.items %}
+                    <li><a href="{{ i.route }}">{{ i.name }}</a></li>
+                    {% endfor %}
 
-                            </ul>
-                        </li>
-                        {% endif %}
-                    {% else %}
-                        <li><a href="{{ item.route }}">{{ item.name }}</a></li>
-                    {% endif %}
+                </ul>
+                </li>
+                {% endif %}
+                {% else %}
+                <li><a href="{{ item.route }}">{{ item.name }}</a></li>
+                {% endif %}
                 {% endfor %}
             </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+            {% endif %}
 
+            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <ul class="nav navbar-nav navbar-right">
+
+                <li><a href="{{ path('club_dashboard_dashboard_index') }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/user.png') }}" /> {{ app.user.name }}</a></li>
+                <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{ path('user') }}"><span>{% trans %}Profile{% endtrans %}</span></a></li>
+                    <li><a href="{{ path('club_user_location_index') }}"><span>{% trans %}Location{% endtrans %}</span></a></li>
+                    {% for item in menu_right %}
+                    <li><a href="{{ item.route }}"><span>{{ item.name }}</span></a></li>
+                    {% endfor %}
+                    <li class="divider"></li>
+                    <li><a href="{{ path('club_welcome_blog_index') }}">{% trans %}Blog{% endtrans %}</a></li>
+                    <li><a href="{{ path('logout') }}">{% trans %}Logout{% endtrans %}</a></li>
+
+                </ul>
+                </li>
+
+            </ul>
+            {% else %}
+            <div class="navbar-collapse collapse">
+                <form class="navbar-form navbar-right" role="form" method="POST" action="{{ path('login_check') }}">
+                    <div class="form-group">
+                        <input type="text" placeholder="Username" class="form-control" name="_username">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" placeholder="Password" class="form-control" name="_password">
+                    </div>
+                    <button type="submit" class="btn btn-success">{% trans %}Login{% endtrans %}</button>
+                </form>
+            </div><!--/.navbar-collapse -->
+
+            {% endif %}
+        </div><!--/.nav-collapse -->
+    </div>
+</div>
