--- a/src/Club/ShopBundle/Resources/views/AdminProduct/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/form.html.twig
@@ -7,25 +7,20 @@
 {{ form_row(form.quantity) }}
 {{ form_row(form.categories) }}
 {{ form_row(form.account_number) }}
-{{ form_row(form.active) }}
 
 {% if form.image is defined %}
 {{ form_row(form.image.file, {'label':'Image'}) }}
 {% else %}
-<div class="control-group">
-    <label class="control-label"  for="club_shop_product_account_number">Current image</label>
-    <div class="controls">
-        <ul class="thumbnails">
-            <li class="span4">
-            <div class="thumbnail">
-                <p>
-                <a href="{{ asset(product.image.webPath) }}" target="_open"><img src="{{ asset(product.image.webPath) }}" width="200" /></a>
-                </p>
-                <a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}')" href="{{ path('admin_shop_product_image_remove', {'id':product.id}) }}" class="btn btn-danger">{% trans %}Delete{% endtrans %}</a>
-            </div>
-            </li>
-        </ul>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <a href="{{ asset(product.image.webPath) }}" target="_open"><img src="{{ asset(product.image.webPath) }}" width="200" /></a>
+            <div class="caption">
+                <h3>Current image</h3>
 
+                <p><a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}')" href="{{ path('admin_shop_product_image_remove', {'id':product.id}) }}" class="btn btn-danger">{% trans %}Delete{% endtrans %}</a></p>
+            </div>
+        </div>
     </div>
 </div>
 {% endif %}
