--- a/src/Club/ShopBundle/Resources/views/AdminProduct/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/index.html.twig
@@ -24,7 +24,13 @@
     {% for product in products %}
     <tr>
         <td>{% if product.image %}<img style="height: 25px" src="{{ asset(product.image.webPath) }}" />{% endif %} <a href="{{ path('admin_shop_product_edit', {'id':product.id}) }}">{{ product.productName }}</a></td>
-        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':product.active} %}</td>
+
+        {% if product.active %}
+        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':product.active, 'url':path('admin_shop_product_deactivate', {'id':product.id})} %}</td>
+        {% else %}
+        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':product.active, 'url':path('admin_shop_product_activate', {'id':product.id})} %}</td>
+        {% endif %}
+
         <td>
             {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_product_edit', { 'id':product.id })} %}
             {% include "ClubLayoutBundle:Default:attribute_link.html.twig" with {'url':path('admin_shop_product_attribute', {'id':product.id})} %}
