--- a/src/Club/ShopBundle/Resources/views/Shop/categories.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/categories.html.twig
@@ -4,9 +4,9 @@
 {% for item in categories %}
     {% if loop.index0 is divisibleby(3) %}
 
-    <div class="row-fluid">
+    <div class="row">
     {% endif %}
-        <div class="span4">
+        <div class="col-sm-4">
                 <h3><img src="{{ asset('bundles/clublayout/images/icons/32x32/image.png') }}" />
                 <a href="{{ path('shop_prod_view', {'id':item.id}) }}">{{ item.categoryName }}</a></h3>
                 <p><strong>{% trans with {'%products%':item.activeProducts|length} %}%products% products in category{% endtrans %}</strong>. {{ item.description|truncate(40) }}</p>
