--- a/src/Club/UserBundle/Resources/views/AdminUser/message.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/message.html.twig
@@ -24,7 +24,7 @@
         </tr>
         {% else %}
         <tr>
-            <td colspan="2>{% trans %}There are no drafts messages.{% endtrans %}</td>
+            <td colspan="2">{% trans %}There are no drafts messages.{% endtrans %}</td>
         </tr>
         {% endfor %}
     </tbody>
