--- a/src/Club/UserBundle/Resources/views/UserNote/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/index.html.twig
@@ -1,17 +1,13 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('admin_user_edit', {'id':user.id}) }}">{% trans %}Edit user{% endtrans %}</a></li>
-            <li><a href="{{ path('admin_user_note_new', {'id':user.id}) }}">{% trans %}Create note{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubUserBundle:AdminUser:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
+<p>
+<a class="btn btn-success" href="{{ path('admin_user_note_new', {'id':user.id}) }}">{% trans %}Create note{% endtrans %}</a>
+</p>
 <table class="table">
   <thead>
     <tr>
