--- a/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
@@ -1,21 +1,28 @@
 {% if menu|length > 0 %}
-    {% for item in menu %}
 <ul class="nav nav-sidebar">
+    {% for item in menu %}
 
     {% if item.header is defined %}
-    <li>{% if item.image is defined %}<img src="{{ asset(item.image) }}" /> {% endif %}{{ item.header }}</li>
+    <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">
+            {% if item.image is defined %}<img src="{{ asset(item.image) }}" /> {% endif %}
+            {{ item.header }}
+        </a>
     {% else %}
-    <li {% if item.active is defined %}class="active"{% endif %}><a href="{{ item.route }}">{{ item.name }}</a></li>
+    <li {% if item.active is defined %}class="active"{% endif %}><a href="{{ item.route }}">{{ item.name }}</a>
     {% endif %}
 
     {% if item.items is defined %}
 
-    {% for subitem in item.items %}
-    <li><a href="{{ subitem.route }}">{{ subitem.name }}</a></li>
-    {% endfor %}
+        <ul class="dropdown-menu" role="menu">
+            {% for subitem in item.items %}
+            <li><a href="{{ subitem.route }}">{{ subitem.name }}</a></li>
+            {% endfor %}
+        </ul>
 
     {% endif %}
+    </li>
 
+    {% endfor %}
 </ul>
-{% endfor %}
 {% endif %}
