--- a/src/Club/ShopBundle/Resources/views/AdminOrder/user.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/user.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubUserBundle:AdminUser:header.html.twig" %}
+{% endblock %}
+
 {% block header %}
 <div class="page-header">
     <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Orders{% endtrans %}</h1>
