--- a/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
@@ -6,9 +6,11 @@
 </div>
 {% endblock %}
 
-{% block body %}
-
+{% block pagenav %}
 {% include "ClubUserBundle:AdminUser:header.html.twig" %}
+{% endblock %}
+
+{% block body %}
 
 <form method="post" action="{{ path('admin_user_edit', {'id':user.id}) }}" class="form-horizontal">
   {% include "ClubUserBundle:AdminUser:form.html.twig" %}
