--- a/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
@@ -1,7 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block body %}
+{% block pagenav %}
 {% include "ClubUserBundle:AdminUser:header.html.twig" %}
+{% endblock %}
 
+{% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_user_group', {'id': user.id})} %}
 {% endblock %}
