--- a/src/Club/UserBundle/Resources/views/AdminUserDocument/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUserDocument/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubUserBundle:AdminUser:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_user_document_new', {'id':user.id})} %}
 {% endblock %}
